updae related post url

--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,5 @@ destination: ./_site
 # timezone:    UTC
 baseurl:     '/articles'
 gems:  [tzinfo]
+markdown: kramdown
+markdown_ext:  markdown,mkd,mkdn,md
