--- a/_config.yml
+++ b/_config.yml
@@ -5,4 +5,4 @@ baseurl:     '/articles'
 gems:  [tzinfo]
 markdown: kramdown
 markdown_ext:  markdown,mkd,mkdn,md
-highlighter: pygments
+highlighter: rouge
